--- a/testPython/buildspec.yml
+++ b/testPython/buildspec.yml
@@ -2,13 +2,12 @@ phases:
   install:
     commands:
       - echo In install phase...
-      - npm install
       - npm install -g serverless
   post_build:
     commands:
       #- serverless deploy -verbose
       - echo In post_build phase...
-      - serverless invoke -f hello
+      - serverless deploy -verbose
 
 artifacts:
   files:
