--- a/testPython/buildspec.yml
+++ b/testPython/buildspec.yml
@@ -8,12 +8,12 @@ phases:
   build:
     commands:
       - echo In build phase...
-      - cd mxnet-bot/LabelBotFullFunctionality
+      - cd testPython
       - chmod 755 deploy.sh
       - ./deploy.sh
 
 artifacts:
   files:
-    - mxnet-bot/LabelBotFullFunctionality/serverless.yml
+    - testPython/serverless.yml
   discard-paths: yes
 
